<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="GridCollectionViewCell" id="gTV-IL-0wX" customClass="GridCollectionViewCell" customModule="ITEvents" customModuleProvider="target">
            <rect key="frame" x="0.0" y="0.0" width="194" height="216"/>
            <autoresizingMask key="autoresizingMask"/>
            <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                <rect key="frame" x="0.0" y="0.0" width="194" height="216"/>
                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                <subviews>
                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="js" translatesAutoresizingMaskIntoConstraints="NO" id="sMZ-Ws-0bP" customClass="UIGradientImageView" customModule="ITEvents" customModuleProvider="target">
                        <rect key="frame" x="0.0" y="0.0" width="194" height="216"/>
                        <accessibility key="accessibilityConfiguration" identifier="EventImage">
                                <bool key="isElement" value="YES"/>
                        </accessibility>
                    </imageView>
                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="fMn-Xg-ON6">
                        <rect key="frame" x="10" y="189" width="179" height="17"/>
                        <accessibility key="accessibilityConfiguration" identifier="EventDate"/>
                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                        <nil key="textColor"/>
                        <nil key="highlightedColor"/>
                    </label>
                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="16" translatesAutoresizingMaskIntoConstraints="NO" id="ADH-h7-Mcw">
                        <rect key="frame" x="10" y="157" width="179" height="24"/>
                        <accessibility key="accessibilityConfiguration" identifier="EventTitle"/>
                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                        <nil key="textColor"/>
                        <nil key="highlightedColor"/>
                    </label>
                </subviews>
            </view>
            <constraints>
                <constraint firstItem="fMn-Xg-ON6" firstAttribute="top" secondItem="ADH-h7-Mcw" secondAttribute="bottom" constant="8" id="Jrs-yU-7b0"/>
                <constraint firstAttribute="trailing" secondItem="ADH-h7-Mcw" secondAttribute="trailing" constant="5" id="PqP-C7-djf"/>
                <constraint firstAttribute="bottom" secondItem="sMZ-Ws-0bP" secondAttribute="bottom" id="YUr-81-0d5"/>
                <constraint firstAttribute="trailing" secondItem="sMZ-Ws-0bP" secondAttribute="trailing" id="Z6X-We-Ubo"/>
                <constraint firstItem="fMn-Xg-ON6" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="ZaK-eD-H9R"/>
                <constraint firstItem="ADH-h7-Mcw" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="dP4-fb-SXD"/>
                <constraint firstAttribute="trailing" secondItem="fMn-Xg-ON6" secondAttribute="trailing" constant="5" id="dzU-4Z-a36"/>
                <constraint firstAttribute="bottom" secondItem="fMn-Xg-ON6" secondAttribute="bottom" constant="10" id="pTL-of-pJ9"/>
                <constraint firstItem="sMZ-Ws-0bP" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="xkR-LO-Hs9"/>
                <constraint firstItem="sMZ-Ws-0bP" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="yuY-JH-ZKY"/>
            </constraints>
            <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
            <size key="customSize" width="194" height="216"/>
            <connections>
                <outlet property="dateLabel" destination="fMn-Xg-ON6" id="NJF-xf-vrL"/>
                <outlet property="image" destination="sMZ-Ws-0bP" id="6gv-uc-6Th"/>
                <outlet property="titleLabel" destination="ADH-h7-Mcw" id="TBA-RZ-nK8"/>
            </connections>
            <point key="canvasLocation" x="3" y="51"/>
        </collectionViewCell>
    </objects>
    <resources>
        <image name="js" width="100" height="100"/>
    </resources>
</document>
