...
            <subviews>
                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="Lpa-zE-eYM">
                    <rect key="frame" x="16" y="20" width="349" height="100"/>
                    <subviews>
                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="City, Country" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A8a-Bj-vvz">
                            <rect key="frame" x="0.0" y="0.0" width="112.5" height="24"/>
                            <accessibility key="accessibilityConfiguration" identifier="EventCity"/>
                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
                            <nil key="textColor"/>
                            <nil key="highlightedColor"/>
                        </label>
                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Address" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kfq-Sb-hnC">
                            <rect key="frame" x="0.0" y="39" width="63" height="61"/>
                            <accessibility key="accessibilityConfiguration" identifier="EventAddress"/>
                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                            <nil key="textColor"/>
                            <nil key="highlightedColor"/>
                        </label>
                    </subviews>
                </stackView>
...
